Improved Dark mode, fixed newsletter form layout, added content update slot action, added underline to some links, added some margin to about us. (#8)

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,16 @@
 @plugin "flowbite-react/plugin/tailwindcss";
 @source "../.flowbite-react/class-list.json";
 
+.linkurl{
+    text-decoration: underline;
+}
+
+@media (prefers-color-scheme: dark) {
+.background{
+        background-color: black;
+}
+  * {
+
+    color: white;
+  }
+}
